# netcdf-4.1.3-with-cmake

./: CMakeLists.txt  FindSZIP.cmake  README  config.h.cmake
cxx/: CMakeLists.txt
cxx4/: CMakeLists.txt
examples/CXX4/: pres_temp_4D_wr.cpp  sfc_pres_temp_wr.cpp
include/: utf8proc.h
libcdmr/: Makefile.am
libdispatch/: Makefile.am
libsrc/: CMakeLists.txt
libsrc4/: CMakeLists.txt
man4/: netcdf-tutorial.html  netcdf.html
nctest/: CMakeLists.txt
